--- a/public/en/pregnancy-related-complaints.html
+++ b/public/en/pregnancy-related-complaints.html
@@ -2,22 +2,65 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>TCM Treatment in Zurich</title>
+    <title>Pregnancy Complaints & TCM Support | TAI TCM Zurich</title>
     <style>
-        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
-        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
-        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
-        .hero-img { width: 100%; height: auto; border-radius: 4px; margin-bottom: 20px; }
+        :root { --tcm-teal: #7fbbad; --tcm-dark: #1a5a7a; }
+        body { font-family: 'Helvetica Neue', Arial, sans-serif; line-height: 1.7; max-width: 850px; margin: 0 auto; padding: 20px; color: #333; }
+        .hero-img { width: 100%; max-height: 400px; object-fit: cover; border-radius: 8px; margin-bottom: 30px; box-shadow: 0 4px 15px rgba(0,0,0,0.1); }
+        .back-link { display: inline-block; margin-bottom: 20px; text-decoration: none; color: var(--tcm-teal); font-weight: bold; }
+        h1 { color: var(--tcm-dark); font-size: 2.2em; border-bottom: 3px solid var(--tcm-teal); padding-bottom: 15px; margin-bottom: 30px; }
+        h2 { color: var(--tcm-dark); margin-top: 35px; font-size: 1.4em; padding-left: 5px; }
+        .highlight-box { background: #f0f7f6; padding: 20px; border-radius: 8px; border-left: 4px solid var(--tcm-teal); margin: 15px 0 25px 0; }
+        .highlight-box p { margin: 0; }
+        .cta-section { margin-top: 60px; padding: 40px; background: #f8fbfb; border-radius: 12px; text-align: center; border: 1px solid #e0eeee; }
+        .btn-booking { display: inline-block; background: var(--tcm-teal); color: white; padding: 18px 35px; text-decoration: none; border-radius: 50px; font-weight: bold; font-size: 1.1em; transition: 0.3s; box-shadow: 0 4px 10px rgba(127, 187, 173, 0.4); }
+        .btn-booking:hover { background: var(--tcm-dark); transform: translateY(-2px); }
+        .footer-meta { margin-top: 50px; padding-top: 30px; border-top: 1px solid #eee; color: #7f8c8d; font-size: 0.95em; }
+        .footer-meta a { color: var(--tcm-dark); text-decoration: none; font-weight: bold; }
     </style>
 </head>
 <body>
-    <a href="../index.html" class="back-link">← Back to Overview</a>
-    <img src="https://via.placeholder.com/800x400" alt="TCM Treatment" class="hero-img">
-    <h1>TCM TREATMENT FOR PREGNANCY RELATED COMPLAINTS</h1>
-    <p>Professional content for PREGNANCY RELATED COMPLAINTS coming soon...</p>
-    <div style="margin-top:40px; background:#f9f9f9; padding:20px; border-radius:8px; text-align:center;">
-        <h3>Book your appointment in Zurich</h3>
-        <a href="https://taitcm.ch/en/contact" style="background:#7fbbad; color:white; padding:10px 20px; text-decoration:none; border-radius:5px; font-weight:bold;">CONTACT US NOW</a>
+    <a href="../index.html?lang=en" class="back-link">← Back to Blog Overview</a>
+    
+    <img src="../img/akupunktur-schwangerschaftsbeschwerden-zuerich.webp" alt="TCM Support during Pregnancy Zurich" class="hero-img">
+
+    <h1>Natural Relief for Pregnancy Complaints – Gentle Help through TCM</h1>
+
+    <h2>1. What complaints occur during pregnancy?</h2>
+    <div class="highlight-box">
+        <p>Typical issues include: nausea, vomiting, and fatigue in the 1st trimester; back pain and digestive problems in the 2nd trimester; sleep disorders, water retention, and inner restlessness in the 3rd trimester.</p>
+    </div>
+
+    <h2>2. Is acupuncture safe during pregnancy?</h2>
+    <div class="highlight-box">
+        <p>Yes. With expert implementation, it is very safe and helpful—e.g., for nausea, fatigue, back pain, sleep problems, or emotional imbalance.</p>
+    </div>
+
+    <h2>3. Is it allowed to take herbs?</h2>
+    <div class="highlight-box">
+        <p>With medical guidance, yes. Particularly mild, calming, and nourishing herbs are used—no strong laxatives or blood-moving agents. Safety is the top priority.</p>
+    </div>
+
+    <h2>4. Does TCM help with sleep problems and restlessness?</h2>
+    <div class="highlight-box">
+        <p>Yes. Acupuncture and herbs regulate Heart and Liver Qi, calm the mind, and promote deep, restful sleep—entirely without medication.</p>
+    </div>
+
+    <h2>5. Can TCM accompany the entire pregnancy?</h2>
+    <div class="highlight-box">
+        <p>Absolutely. Many women use TCM for support from conception to childbed—for stabilization, preparation for birth, and to promote natural regeneration.</p>
+    </div>
+
+    <div class="cta-section">
+        <h3>Gentle Support for You and Your Baby</h3>
+        <p>Book your appointment online now via our Google Calendar.</p>
+        <br>
+        <a href="https://calendar.google.com/calendar/u/0/appointments/schedules/AcZssZ0jOrw-hPHEO957S6RZcBGwPS0rY0i-FUDVJ6Sfv0rNPMCD3MPv0u5TgITgNzB7ugn0w7aoWx57" class="btn-booking" target="_blank">Book Appointment Online</a>
+    </div>
+
+    <div class="footer-meta">
+        <p>For more information: <a href="https://taitcm.ch" target="_blank">taitcm.ch</a></p>
+        <p>TAI TCM Zurich | Expertise in Integrative Birth Preparation</p>
     </div>
 </body>
 </html>
